crates/tirea-state-derive/tests/ui/derive_lattice_enum.rs
use tirea_state_derive::Lattice;

#[derive(Clone, PartialEq, Lattice)]
enum Bad {
    A,
    B,
}

fn main() {}
